--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <ul class="flex">
-        <!-- <li class="a">Let's make some happy little clouds in our world. Be sure it's odorless or you'll be working by yourself. A half a hair and some air. Let's build us a little cloud. I lived in Alaska for many, many years.</li> -->
+        <!-- <li class="a">Let's make some happy little clouds in our world. </li>  -->
         <li class="a">A</li>
         <li class="b">B</li>
         <li class="c">C</li>
